k8s/demo/ingress/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hdim-internal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: hdim-demo-basic-auth@kubernetescrd
spec:
  rules:
    - host: traces.healthdatainmotion.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
    - host: docs.healthdatainmotion.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-edge
                port:
                  number: 8080
    - host: ops.healthdatainmotion.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ops-service
                port:
                  number: 4710
