k8s/demo/ingress/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hdim-public
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: demo.healthdatainmotion.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clinical-portal
                port:
                  number: 80
    - host: api.healthdatainmotion.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-edge
                port:
                  number: 8080
    - host: fhir.healthdatainmotion.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fhir-service
                port:
                  number: 8085
